# bl4_auto_crypter

./: .cruft.json  .gitignore  .gitmodules  .typos.toml  CMakeLists.txt  CMakePresets.json  Readme.md
.github/workflows/: build.yml
src/: crypter.cpp  crypter.h  dllmain.cpp  hooks.cpp  hooks.h  logging.cpp  logging.h  main.cpp  memory.cpp  memory.h  pch.h  sync.cpp  sync.h  versioninfo.rc
test_data/: .gitattributes  .gitignore  01 - 76561198107952326.sav  01 - 76561198107952326.yaml  01 steam - 76561198107952326.yaml  02 epic - ca20f90c210148eeb4d2f8c30e664ea0.sav  02 epic - ca20f90c210148eeb4d2f8c30e664ea0.yaml  03 sync 11 - 72057594037927937.sav  04 sync 22 - 72057594037927937.sav  05 - 6232b533dfa448ec83e59b980283ecc1.sav  05 - 6232b533dfa448ec83e59b980283ecc1.yaml  06 - 76561197960279285.sav  06 - 76561197960279285.yaml  07 - 76561197960279285.sav  07 - 76561197960279285.yaml  conftest.py  test_crypter.py  test_sync.py
